sllithly slightly soul in body it worked

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -12,14 +12,6 @@
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\Desktop\\Диплом\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
     }
    ],
    "source": [
@@ -27,24 +19,25 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from mirage.index import WordCountingChunkingAlgorithm, FolderRawStorage, SQLiteChunkStorage, RAMChunkStorage\n",
-    "from mirage.embedders import HuggingFaceEmbedder, TextNormalizer\n",
+    "from mirage import WordCountingChunkingAlgorithm, FolderRawStorage, SQLiteChunkStorage, RAMChunkStorage\n",
+    "from mirage import HuggingFaceEmbedder, TextNormalizer\n",
+    "from mirage import NatashaSentenceChunking\n",
     "import os\n",
     "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,48 +47,61 @@
     "logging.basicConfig(level=logging.ERROR)\n",
     "\n",
     "\n",
-    "documents = FolderRawStorage('data')\n",
+    "documents = FolderRawStorage('data_test')\n",
     "chunks = RAMChunkStorage()\n",
-    "algorithm = WordCountingChunkingAlgorithm(documents, chunks, words_amount=100)\n",
+    "# algorithm = WordCountingChunkingAlgorithm(documents, chunks, words_amount=100)\n",
+    "\n",
+    "algorithm = NatashaSentenceChunking(raw_storage=documents, chunk_storage=chunks, sentences_in_chunk=1)\n",
     "algorithm.execute(visualize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Приказ Росавиации от 28.12.2022 N 970-П\\n\"Об утверждении Норм летной годности\\nгражданских легких самолетов НЛГ 23\"\\nДокумент предоставлен КонсультантПлюс\\nwww.consultant.ru\\nДата сохранения: 09.01.2024\\nПриказ Росавиации от 28.12.2022 N 970-П\\nДокумент предоставленКонсультантПлюс\\n\"Об утверждении Норм летной годности гражданских\\nДата сохранения: 09.01.2024\\nлегких самолетов НЛГ 23\"\\nМИНИСТЕРСТВО ТРАНСПОРТА РОССИЙСКОЙ ФЕДЕРАЦИИ\\nФЕДЕРАЛЬНОЕ АГЕНТСТВО ВОЗДУШНОГО ТРАНСПОРТА\\nПРИКАЗ\\nот 28 декабря 2022 г. N 970-П\\nОБ УТВЕРЖДЕНИИ НОРМ\\nЛЕТНОЙ ГОДНОСТИ ГРАЖДАНСКИХ ЛЕГКИХ САМОЛЕТОВ НЛГ 23\\nВ соответствии с пунктом 2 статьи 35 Воздушного кодекса Российской Федерации и подпунктами\\n5.14.4 и 9.9 Положения о Федеральном агентстве воздушного транспорта, утвержденного постановлением\\nПравительства Российской Федерации от 30 июля 2004 г. N 396, приказываю:\\n1. Утвердить прилагаемыеНормы летной годности гражданских легких самолетов НЛГ 23.\\n2. Настоящий приказ вступает в силу'"
+       "'Он внезапно перестал икать, сердце его стукнуло и на мгновенье куда-то провалилось, потом вернулось, но с тупой иглой, засевшей в нем. Кроме того, Берлиоза охватил необоснованный, но столь сильный страх, что ему захотелось тотчас же бежать с Патриарших без оглядки.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index = chunks.get_indexes()[0]\n",
+    "index = chunks.get_indexes()[18]\n",
     "chunks[index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\User\\Desktop\\Диплом\\MIRAGE\\env\\Lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\User\\.cache\\huggingface\\hub\\models--sentence-transformers--distiluse-base-multilingual-cased-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
+      "1\n"
      ]
     }
    ],
+   "source": [
+    "print(\n",
+    "    sum(\n",
+    "        chunks[index] == \"Речь эта, как впоследствии узнали, шла об Иисусе Христе.\" for index in chunks.get_indexes()\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from mirage.embedders.BowEmbedder import BowEmbedder\n",
     "\n",
@@ -105,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "512"
+       "768"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2660/2660 [04:01<00:00, 11.02it/s]\n"
+      "100%|██████████| 8500/8500 [00:50<00:00, 168.98it/s]\n"
      ]
     }
    ],
@@ -152,37 +158,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[np.float32(-0.090230174), np.float32(-0.08811018), np.float32(-0.08783565), np.float32(-0.08416579), np.float32(-0.07956384)]\n"
+      "[0.9502697, 0.94680804, 0.9425399, 0.9407006, 0.9384583, 0.9349617, 0.93418396, 0.9336841, 0.93225276, 0.93058705, 0.93043286, 0.9302147, 0.9265678, 0.925382, 0.92433566, 0.92408645, 0.92332095, 0.9228698, 0.92221934, 0.92108953]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['и\\nработе при наличии состояний слезных органов и слезоотводящих путей, связанных с нарушением\\nслезоотведения.\\nК данным заболеваниям относятся: сужение, неправильное положение слезных точек, стриктура\\nслезно-носовых канальцев, воспаление слезного мешка, слезной железы, травматические повреждения и\\nдругие заболевания, вызывающие слезотечение.\\n282. Состояния слезных органов и слезоотводящих путей без нарушения слезоотведения,\\nвосстановление функции слезоотведения, а также отсутствие нижней слезной точки при нормальной\\nфункции верхней слезной точки и канальцев (оцениваются канальцевая и носовая пробы) не являются\\nдисквалифицирующим фактором при определении годности к работе.\\n283. После перенесенного острого заболевания - конъюнктивита, склерита, кератита, переднего\\nувеита, легких повреждениях глазного яблока - заключение о допуске к летной работе выносится после\\nвыздоровления и прекращения лечения, так как некоторые глазные препараты',\n",
-       " 'вопрос о годности рассматривается после выздоровления и\\nпрекращения лечения, так как некоторые глазные препараты могут приводить к ухудшению зрения.\\nСледует учитывать первопричину.\\n273. При задних увеитах, длительно текущих, рецидивирующих иридоциклитах (должны быть\\nприложены результаты системного обследования, следует учитывать первопричины заболевания),\\nкератитах, хориоретинитах, невритах, травматических повреждениях глазного яблока с исходом\\nвыздоровления кандидаты на получение медицинского заключения 2 класса подлежат лечению с\\nпоследующим медицинским освидетельствованием.\\n274. Кандидаты на получение медицинского заключения 2 класса при наличии следующих\\nзаболеваний должны быть признаны не годными к обучению и работе: отслойка сетчатки, дегенеративный\\nретиношизис, любые виды тапеторетинальной дегенерации сетчатки, окклюзия сосудов сетчатки,\\nэкссудативная форма возрастной макулярной дегенерации сетчатки, рецидивирующий кератит, рубцы\\nроговицы, нарушающие зрительную функцию, эндокринная офтальмопатия, атрофия',\n",
-       " 'проявление\\nнедостаточного физического развития. Пороки развития, хронические болезни костей, суставов, хрящей,\\nмышц и сухожилий, последствия травм и операций, рубцы после ожогов и обморожений у кандидата на\\nполучение медицинского заключения оцениваются в зависимости от степени прогрессирования и\\nимеющихся функциональных нарушений. Прогрессирующие, сопровождающиеся нарушением функций в\\nзначительной степени, болевым синдромом, мешающие ношению одежды, обуви состояния являются\\nоснованиями для признания негодности.\\n170. При дегенеративно-дистрофических процессах в костях позвоночника (M42) (межпозвонковый\\nостеохондроз, спондилоартроз), последствиях травм и операций, рубцах после ожогов (T30) и\\nобморожений с незначительным или умеренным ограничением функций без болевого синдрома,\\nнепрогрессирующих, не мешающих ношению одежды и обуви, заключение о годности к работе выносится\\nКонсультантПлюс\\nwww.consultant.ru Страница 48 из 173\\nнадежная правовая поддержка\\nПриказ Минтранса России от',\n",
-       " 'могут приводить к\\nухудшению зрения. Следует учитывать первопричину.\\n284. При задних увеитах, длительно текущих, рецидивирующих иридоциклитах (должны быть\\nприложены результаты системного обследования, следует учитывать первопричины заболевания),\\nкератитах, хориоретинитах, невритах, травматических повреждениях глазного яблока с исходом\\nвыздоровления кандидаты на получение медицинского заключения подлежат лечению с последующим\\nмедицинским освидетельствованием.\\n285. Кандидаты на получение медицинского заключения должны быть признаны не годными к\\nобучению и работе при наличии следующих заболеваний: отслойка сетчатки, дегенеративный\\nретиношизис, любые виды тапеторетинальной дегенерации сетчатки, окклюзия сосудов сетчатки,\\nэкссудативная форма возрастной макулярной дегенерации сетчатки, рецидивирующий кератит, рубцы\\nроговицы, нарушающие зрительную функцию, эндокринная офтальмопатия, атрофия зрительного нерва\\nлюбой этиологии, злокачественные новообразования глаза и его придаточного аппарата, дислокация\\nхрусталика, патологический нистагм любой этиологии, наличие инородных',\n",
-       " 'отставать от роста), дефицит массы тела менее 25%\\nне расценивается как проявление недостаточного физического развития. Пороки развития, хронические\\nболезни костей, суставов, хрящей, мышц и сухожилий, последствия травм и операций, рубцы после\\nожогов и обморожений у кандидата на получение медицинского заключения оцениваются в зависимости\\nот степени прогрессирования, локализации, наличия косметического дефекта и имеющихся\\nфункциональных нарушений. Прогрессирующие, сопровождающиеся нарушением функции в\\nзначительной степени, болевым синдромом, мешающие ношению одежды, обуви, состояния являются\\nоснованием для признания негодности к обучению и работе. При дегенеративно-дистрофических\\nпроцессах в костях позвоночника (M42) (межпозвонковый остеохондроз, спондилоартроз), последствиях\\nтравм и операций, рубцах после ожогов (T30) и обморожений с незначительным или умеренным\\nограничением функций без болевого синдрома, непрогрессирующих, не мешающих ношению']"
+       "['Ничья судьба, кроме своей собственной, вас более не интересует.',\n",
+       " 'Национальность пришельца было бы трудно установить.',\n",
+       " '—\\xa0К вам начальник тайной стражи, — спокойно сообщил Марк.',\n",
+       " 'Насчет квартиры скажи, чтобы перестали трепаться.',\n",
+       " 'Напротив еще палисадничек?',\n",
+       " 'Я ничуть не погрешу, если, говоря об этом, упомяну о причудливо тасуемой колоде карт.',\n",
+       " 'Через несколько мгновений перед Иваном не было ни Стравинского, ни свиты.',\n",
+       " 'Наихудшие страдания ей причиняло правое колено, которое целовали.',\n",
+       " 'Напротив, в четырех шагах, под забором, сирень, липа и клен.',\n",
+       " '—\\xa0А вот, например, кентурион Марк, его прозвали Крысобоем, — он — добрый?',\n",
+       " 'Настигая Маргариту, он все более обозначался, стало видно, что кто-то летит верхом.',\n",
+       " 'Через несколько мгновений дребезжащая машина, как вихрь, летела по кольцу Садовой.',\n",
+       " '—\\xa0Никаких я ваших стихов не читал! — нервно воскликнул посетитель.',\n",
+       " 'Ну, натурально, я выходил гулять.',\n",
+       " 'Накрыто, словом, было чисто, умело.',\n",
+       " 'Да, нет никакой!), да, так с вороватым видом кот собирался устремиться зачем-то в лопухи.',\n",
+       " '—\\xa0Начисто, — крикнул Коровьев, и слезы побежали у него из-под пенсне потоками, — начисто!',\n",
+       " 'Наталья Прокофьевна, я протестую.',\n",
+       " 'Надел что было, потому что спешил в ресторан к Грибоедову.',\n",
+       " 'Несколько раз он выскакивал из нее и опять проваливался, и каждый раз этот провал сопровождался грохотом катастрофы.']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'Какой пилот самолёта?'\n",
+    "query = 'начальник Иудеи утвердил смертный приговор'\n",
+    "query_vector = emb.embed(text=query)\n",
+    "# print(query_vector)\n",
     "answer = vector_index.query(\n",
-    "    emb.embed(\n",
-    "        text=query \n",
-    "    ), top_k=5\n",
+    "    query_vector, top_k=20\n",
     ")\n",
     "print([element.distance for element in answer])\n",
     "[chunks[element.chunk_storage_key] for element in answer]"
@@ -190,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +306,7 @@
     "from mirage.inference.prompters.APILLM import LLM\n",
     "llm = LLM()\n",
     "llm.do_request(query=query,\n",
-    "               chanks_storage=chunks,\n",
+    "               chunk_storage=chunks,\n",
     "               indexes=[element.chunk_storage_key for element in answer],\n",
     "               promt='')"
    ]
