--- a/benchmark/create_benchmark.ipynb
+++ b/benchmark/create_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "]\n",
     "\n",
     "for q, a in zip(questions, answers):\n",
-    "    t.paste_doc_name('Постановление Правительства РФ от 12.04.2022 N 642 _Об утверждении Правил разработки и применения систем управления безопасностью полетов воздушных судов, а также сбора и анализа данных о факторах опасности и риска, создающих угрозу безопасности полет.pdf')\n",
+    "    t.paste_doc_name('doc1.pdf')\n",
     "    with open('context/c1', 'r', encoding='utf-8') as context:\n",
     "        t.paste_ideal_context(context.read())\n",
     "\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "]\n",
     "\n",
     "for q, a in zip(questions, answers):\n",
-    "    t.paste_doc_name('Постановление Правительства РФ от 12.04.2022 N 642 _Об утверждении Правил разработки и применения систем управления безопасностью полетов воздушных судов, а также сбора и анализа данных о факторах опасности и риска, создающих угрозу безопасности полет.pdf')\n",
+    "    t.paste_doc_name('doc1.pdf')\n",
     "    with open('context/c2', 'r', encoding='utf-8') as context:\n",
     "        t.paste_ideal_context(context.read())\n",
     "\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "]\n",
     "\n",
     "for q, a in zip(questions, answers):\n",
-    "    t.paste_doc_name('Постановление Правительства РФ от 12.04.2022 N 642 _Об утверждении Правил разработки и применения систем управления безопасностью полетов воздушных судов, а также сбора и анализа данных о факторах опасности и риска, создающих угрозу безопасности полет.pdf')\n",
+    "    t.paste_doc_name('doc1.pdf')\n",
     "    with open('context/c3', 'r', encoding='utf-8') as context:\n",
     "        t.paste_ideal_context(context.read())\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
     "]\n",
     "\n",
     "for q, a in zip(questions, answers):\n",
-    "    t.paste_doc_name('Постановление Правительства РФ от 12.04.2022 N 642 _Об утверждении Правил разработки и применения систем управления безопасностью полетов воздушных судов, а также сбора и анализа данных о факторах опасности и риска, создающих угрозу безопасности полет.pdf')\n",
+    "    t.paste_doc_name('doc1.pdf')\n",
     "    with open('context/c4', 'r', encoding='utf-8') as context:\n",
     "        t.paste_ideal_context(context.read())\n",
     "\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "]\n",
     "\n",
     "for q, a in zip(questions, answers):\n",
-    "    t.paste_doc_name('Постановление Правительства РФ от 12.04.2022 N 642 _Об утверждении Правил разработки и применения систем управления безопасностью полетов воздушных судов, а также сбора и анализа данных о факторах опасности и риска, создающих угрозу безопасности полет.pdf')\n",
+    "    t.paste_doc_name('doc1.pdf')\n",
     "    with open('context/c5', 'r', encoding='utf-8') as context:\n",
     "        t.paste_ideal_context(context.read())\n",
     "\n",
